what to do next added

--- a/notebooks/try1.ipynb
+++ b/notebooks/try1.ipynb
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2092,7 @@
        "(381, 124)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15217,6 +15217,17 @@
     "\n",
     "for pair in pairs:\n",
     "    plot_outlier_sig(pair)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further thoughts\n",
+    "- pairwise - weak correlations, low significance\n",
+    "- apply age brakets (guess: no diff)\n",
+    "- try predicting (LM? SVM?) - then get variable significance (if accuracy too low - any added info in var significance?)\n",
+    "- find other stat test"
    ]
   },
   {
