--- a/notebooks/try1.ipynb
+++ b/notebooks/try1.ipynb
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2793,7 @@
        "(341, 80)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15241,7 +15241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15251,7 +15251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -15802,7 +15802,7 @@
        "4  5.0  5.0  5.0   4   5   3  5.0  4.0  4.0  2.0  5.0  5.0  5.0  5.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15815,7 +15815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -16366,7 +16366,7 @@
        "4  5.0  5.0  5.0   4   5   3  5.0  4.0  4.0  2.0  5.0  5.0  5.0  5.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16378,7 +16378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -16398,11 +16398,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "knr_model = KernelReg(y,X, var_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([22., 18., 20., 21., 22., 22., 18., 18., 21., 20., 22., 20., 21.,\n",
+       "        19., 22., 19., 22., 19., 19., 21., 18., 18., 18., 21., 19., 20.,\n",
+       "        20., 22., 22., 20., 17., 18., 18., 17., 22., 20., 20., 19., 18.,\n",
+       "        19., 20., 20., 21., 22., 21., 21., 23., 20., 22., 21., 20., 21.,\n",
+       "        20., 20., 20., 21., 21., 22., 22., 21., 21., 23., 22., 23., 21.,\n",
+       "        21., 20., 21., 21., 21., 22., 21., 21., 21., 22., 21., 23., 23.,\n",
+       "        22., 22., 22., 21., 21., 23., 19., 20., 20., 18., 22., 22., 19.,\n",
+       "        18., 19., 20., 20., 18., 18., 20., 19., 20., 20., 19., 23., 21.,\n",
+       "        21., 19., 23., 21., 18., 19., 21., 16., 20., 20., 19., 19., 18.,\n",
+       "        23., 17., 21., 19., 20., 20., 17., 20., 18., 17., 17., 17., 17.,\n",
+       "        19., 20., 23., 20., 21., 17., 18., 19., 20., 19., 20., 20., 23.,\n",
+       "        19., 21., 19., 19., 20., 17., 17., 18., 19., 20., 17., 18., 21.,\n",
+       "        21., 19., 19., 17., 17., 17., 19., 19., 19., 17., 17., 20., 19.,\n",
+       "        20., 19., 22., 18., 18., 17., 20., 20., 20., 19., 20., 19., 17.,\n",
+       "        17., 19., 20., 17., 18., 19., 20., 20., 17., 18., 19., 21., 17.,\n",
+       "        20., 17., 19., 20., 19., 20., 21., 20., 20., 19., 21., 21., 21.,\n",
+       "        21., 21., 21., 20., 23., 21., 20., 20., 20., 20., 18., 18., 19.,\n",
+       "        21., 21., 17., 17., 19., 17., 17., 18., 18., 17., 21., 18., 18.,\n",
+       "        18., 19., 17., 17., 17., 19., 16., 17., 17., 23., 20., 17., 21.,\n",
+       "        17., 18., 17., 17., 18., 17., 19., 17., 17., 17., 17., 18., 19.,\n",
+       "        19., 19., 19., 20., 20., 23., 17., 20., 18., 20., 20., 20., 17.,\n",
+       "        20., 20., 20., 19., 20., 21., 19., 19., 18., 19., 20., 19., 19.,\n",
+       "        19., 20., 20., 21., 20., 20., 19., 19., 17., 19., 18., 20., 20.,\n",
+       "        17., 21., 18., 18., 21., 22., 17., 19., 20., 17., 17., 17., 17.,\n",
+       "        17., 17., 17., 17., 19., 17., 19., 20., 18., 20., 17., 17., 19.,\n",
+       "        17., 17., 18., 20., 18., 17., 19., 17., 18., 18., 20., 17., 17.,\n",
+       "        19., 20., 19.]),\n",
+       " array([[-0.24795083, -0.16238525, -0.44718429, ...,  1.4306307 ,\n",
+       "          0.44350173, -0.27709721],\n",
+       "        [ 0.07952858,  0.4986933 , -1.12836324, ...,  0.23289708,\n",
+       "          0.1970179 , -0.15241051],\n",
+       "        [-0.32559158, -0.01378529, -0.25385646, ...,  0.02324816,\n",
+       "          0.43791977, -0.26492743],\n",
+       "        ...,\n",
+       "        [-0.15284224,  0.63717317, -0.49809418, ...,  0.25281607,\n",
+       "          0.2014669 ,  0.2399756 ],\n",
+       "        [ 0.95789817, -0.00530083,  0.17299558, ..., -0.09314127,\n",
+       "          0.10361347, -0.1492619 ],\n",
+       "        [ 0.52646466,  0.05926939, -0.46953975, ..., -0.10220657,\n",
+       "          0.28959549,  0.04753575]]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knr_model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Not Significant'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knr_model.sig_test([0,1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "filename = '../notebooks/knr_age_78o_na0.sav'\n",
+    "pickle.dump(knr_model, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knr_r_model = pickle.load(open(filename, 'rb'))"
    ]
   },
   {
