new analysis notebook

--- a/notebooks/try1.ipynb
+++ b/notebooks/try1.ipynb
@@ -2805,7 +2805,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3.columns=['prefs-nature','prefs-price','prefs-active_rest','prefs-mates','prefs-comfort','prefs-theme_parks'\n",
+    "             ,'prefs-quiet','prefs-new_cultures','prefs-history','prefs-accommodation','prefs-active_time','prefs-beach'\n",
+    "             ,'prefs-easy_access','prefs-security','prefs-weather','prefs-entertainment','prefs-meet'\n",
+    "            ,'info-agency','info-hotel_site','info-friends','info-region_site','info-own','info-none','info-forums'\n",
+    "             ,'info-guides','info-TripAdvisor'\n",
+    "             ,'place-location','place-ratings','place-nature','place-show_off','place-ease','place-price','place-popularity'\n",
+    "             ,'place-climate','place-variety','place-history','place-new','place-security'\n",
+    "            ,'hotel-owner','hotel-reaching','hotel-recommend','hotel-price','hotel-security','hotel-cleanliness'\n",
+    "             ,'hotel-service','hotel-location','hotel-facility','hotel-opinions','hotel-comfort'\n",
+    "            ,'activity-sightseeing','activity-culture','activity-cuisine','activity-friends','activity-sunbathing'\n",
+    "             ,'activity-family','activity-knowledge','activity-shopping','activity-fun','activity-sport'\n",
+    "            ,'sat-weather','sat-nature','sat-assessment','sat-hotel','sat-friends','sat-atmosphere','sat-price'\n",
+    "             ,'sat-expectations','sat-service','sat-cleanliness','sat-history'\n",
+    "            ,'share-talk','share-photos_SM','share-review_SM','share-recommend_agency','share-review_hotel_int'\n",
+    "             ,'share-review_region_int','share-recommend_hotel','share-recommend_region'\n",
+    "            ,'age','country']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2814,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2824,11 +2848,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3 = pd.read_csv('../data/df3_cleaned_data.csv', index_col=0)"
+    "df3 = pd.read_csv('../output/df3_cleaned_data.csv', index_col=0)"
    ]
   },
   {
