latest added changes - analysis notebook

--- a/notebooks/try1.ipynb
+++ b/notebooks/try1.ipynb
@@ -16606,7 +16606,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
